tela de profile

--- a/src/main/resources/templates/base/layout.html
+++ b/src/main/resources/templates/base/layout.html
@@ -91,7 +91,7 @@
                               	</a>
                               	<ul class="dropdown-menu">
                               		<li>
-	                                	<a>
+	                                	<a th:href="@{/dashboard/profile}">
 			                                <p>Perfil</p>
 			                            </a>
 									</li>
